--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,9 +1,3 @@
 @import './mixins/';
-
-header {
-  @include flex-justify-center;
-
-  @include small-desktop {
-    color: red;
-  }
-}
+@import './base/';
+@import './globals/';
