--- a/src/assets/scss/globals/text.scss
+++ b/src/assets/scss/globals/text.scss
@@ -98,6 +98,21 @@
 }
 
 .text {
+  &-link {
+    position: relative;
+    color: #55a1ff;
+
+    &::after {
+      content: '';
+      position: absolute;
+      bottom: -8px;
+      left: 0;
+      border-bottom: 2px dotted #55a1ff;
+      width: 100%;
+      height: 2px;
+    }
+  }
+
   &-p {
     line-height: 1.55;
 
@@ -156,7 +171,7 @@
       font-size: 15px;
 
       @include mobile {
-        font-size: 13px;
+        font-size: 8px;
       }
     }
   }
