--- a/src/assets/scss/mixins/flex.scss
+++ b/src/assets/scss/mixins/flex.scss
@@ -3,6 +3,11 @@
   align-items: center;
 }
 
+@mixin flex-align-end {
+  display: flex;
+  align-items: end;
+}
+
 @mixin flex-justify-center {
   display: flex;
   justify-content: center;
