--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -1,6 +1,7 @@
 .header {
   &__top {
     gap: 20px;
+    border-bottom: 2px solid #ffffff05;
     padding: 28px 0;
 
     @include flex-all-between;
@@ -165,6 +166,8 @@
   &__number {
     font-size: 18px;
 
+    @include flex-align-center;
+
     img {
       margin-right: 5px;
       width: 32px;
@@ -252,3 +255,348 @@
   }
 }
 
+// navigation
+
+.nav {
+  opacity: 1;
+  transform: translateX(0%);
+  transition:
+    transform 0.3s ease-in-out,
+    opacity 0.3s ease-in-out;
+
+  &__heading {
+    display: none;
+  }
+
+  &__container {
+    padding: 0 62px;
+    padding-top: 24px;
+
+    @include flex-align-center;
+
+    @include small-desktop {
+      padding: 0;
+      padding-top: 29px;
+    }
+  }
+
+  &__services {
+    @include flex-align-center;
+    display: inline-flex;
+    gap: 10px;
+    width: 165px;
+
+    &-title {
+      &-text {
+        display: none;
+      }
+
+      &-icon {
+        width: 46px;
+        height: 46px;
+      }
+    }
+
+    &-icon {
+      margin-left: 20px;
+    }
+
+    &-link {
+      display: inline-block;
+      width: 105px;
+    }
+  }
+
+  &__dropdown-menu {
+    display: none;
+    opacity: 0;
+    transform: translateY(-10px);
+    transition:
+      opacity 0.3s ease,
+      transform 0.3s ease;
+
+    &-container {
+      position: relative;
+      display: flex;
+      gap: 8px;
+      flex-direction: column;
+
+      &::before {
+        content: '';
+        position: absolute;
+        top: -13%;
+        left: 49px;
+        border-radius: 2px;
+        width: 14px;
+        height: 14px;
+        background: white;
+        transform: rotate(-45deg);
+
+        @include small-desktop {
+          left: 78px;
+        }
+
+        @include small-tablet {
+          top: -12%;
+          left: 102px;
+        }
+      }
+    }
+
+    &.active {
+      position: absolute;
+      top: 100%;
+      left: 7.4%;
+      display: block;
+      border-radius: 10px;
+      padding: 25px;
+      font-size: 15px;
+      line-height: 1.55;
+      background: #fff;
+      opacity: 1;
+      transform: translateY(0);
+
+      @include small-desktop {
+        top: 100%;
+        left: 3.7%;
+      }
+
+      @include small-tablet {
+        top: 100%;
+        padding: 20px;
+        font-size: 13px;
+      }
+
+      a {
+        color: black;
+      }
+
+      li {
+        position: relative;
+        display: inline-block;
+      }
+
+      li::after {
+        content: '';
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        display: none;
+        border-bottom: 2px dotted #55a1ff;
+        width: 100%;
+        height: 2px;
+        opacity: 0;
+        transition: opacity 0.3s;
+      }
+
+      li:hover {
+        font-weight: 600;
+
+        &::after {
+          display: block;
+          opacity: 1;
+        }
+      }
+    }
+  }
+
+  &__wrapper {
+    margin-left: auto;
+    width: 80%;
+
+    @include small-desktop {
+      display: none;
+    }
+  }
+
+  &__item {
+    font-style: 20px;
+    opacity: 0.8;
+  }
+
+  &__list {
+    @include flex-all-between;
+  }
+
+  &__address {
+    display: none;
+  }
+}
+
+body.nav-opened {
+  &::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 90;
+    width: 100%;
+    height: 100vh;
+    background: #00000080;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+  }
+
+  .nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    width: 45%;
+    height: 100vh;
+    background: #0c1120;
+    transform: translateX(0%);
+    transition: transform 0.3s ease-in-out;
+
+    @include small-tablet {
+      width: 347px;
+    }
+
+    &__container {
+      padding: 24px 27px 53px 28px;
+    }
+
+    &__heading {
+      margin-bottom: 3vw;
+      width: 100%;
+
+      @include flex-all-between;
+
+      @include small-tablet {
+        margin-bottom: 15px;
+      }
+    }
+
+    &__services {
+      display: block;
+      order: 3;
+      width: 100%;
+
+      &-link {
+        display: none;
+      }
+
+      &-title {
+        @include flex-align-center;
+        gap: 15px;
+        margin-bottom: 3vw;
+
+        @include small-tablet {
+          margin-bottom: 15px;
+        }
+
+        &-text {
+          display: block;
+          font-size: 20px;
+        }
+      }
+    }
+
+    &__wrapper {
+      display: block;
+      margin: 0;
+      margin-bottom: 3vw;
+      width: 100%;
+    }
+
+    &__list {
+      display: flex;
+      gap: 1.5vw;
+      flex-direction: column;
+      align-items: self-start;
+
+      @include small-tablet {
+        gap: 15px;
+      }
+    }
+
+    &__link {
+      font-size: 20px;
+
+      @include mobile {
+        font-size: 15px;
+      }
+    }
+
+    &__dropdown-menu {
+      display: block;
+      margin-bottom: 3vw;
+      opacity: 1;
+
+      @include small-tablet {
+        margin-bottom: 15px;
+      }
+
+      &-container {
+        gap: 1.5vw;
+
+        @include small-tablet {
+          gap: 15px;
+        }
+
+        @include mobile {
+          font-size: 15px;
+        }
+
+        &::before {
+          display: none;
+        }
+
+        a {
+          color: #ffffffb3;
+        }
+      }
+    }
+
+    &__address {
+      display: block;
+      order: 4;
+      width: 100%;
+
+      &-title {
+        margin-bottom: 3vw;
+        font-size: 20px;
+
+        @include small-tablet {
+          margin-bottom: 15px;
+        }
+      }
+
+      p {
+        margin-bottom: 1vw;
+
+        @include small-tablet {
+          margin-bottom: 10px;
+        }
+
+        @include mobile {
+          font-size: 15px;
+        }
+      }
+
+      a {
+        @include mobile {
+          font-size: 13px;
+        }
+      }
+    }
+  }
+
+  .navigation {
+    &__heading {
+      &-title {
+        gap: 15px;
+        font-size: 20px;
+
+        @include flex-align-center;
+      }
+    }
+  }
+}
+
+body:not(.nav-opened)::before {
+  opacity: 0;
+  pointer-events: none;
+}
