--- a/src/assets/scss/globals/text.scss
+++ b/src/assets/scss/globals/text.scss
@@ -2,8 +2,12 @@
   &-h1 {
     font-size: 64px;
 
+    @include medium-desktop {
+      font-size: 48;
+    }
+
     @include tablet {
-      font-size: 50px;
+      font-size: 56px;
     }
 
     @include mobile {
@@ -11,23 +15,27 @@
     }
 
     @include small-mobile {
-      font-size: 34px;
+      font-size: 38px;
     }
   }
 
   &-h2 {
     font-size: 70px;
 
-    @include tablet {
-      font-size: 54px;
+    @include medium-desktop {
+      font-size: 50;
     }
 
-    @include mobile {
+    @include tablet {
       font-size: 42px;
     }
 
-    @include small-mobile {
+    @include mobile {
       font-size: 36px;
+    }
+
+    @include small-mobile {
+      font-size: 34px;
     }
   }
 
@@ -84,7 +92,7 @@
     }
 
     @include small-mobile {
-      font-size: 18px;
+      font-size: 20px;
     }
   }
 
@@ -120,6 +128,10 @@
       line-height: 1.55;
       color: #ffffffb3;
       opacity: 0.2;
+    }
+
+    &-op {
+      color: #ffffffb3;
     }
 
     &-subtitle {
@@ -171,7 +183,7 @@
       font-size: 15px;
 
       @include mobile {
-        font-size: 8px;
+        font-size: 13px;
       }
     }
   }
