--- a/src/assets/scss/globals/text.scss
+++ b/src/assets/scss/globals/text.scss
@@ -23,11 +23,15 @@
     font-size: 70px;
 
     @include medium-desktop {
-      font-size: 50;
+      font-size: 60px;
     }
 
     @include tablet {
-      font-size: 42px;
+      font-size: 50px;
+    }
+
+    @include small-tablet {
+      font-size: 40px;
     }
 
     @include mobile {
@@ -35,7 +39,7 @@
     }
 
     @include small-mobile {
-      font-size: 34px;
+      font-size: 30px;
     }
   }
 
@@ -59,8 +63,12 @@
     font-size: 32px;
     line-height: 1.3;
 
+    @include medium-desktop {
+      font-size: 24px;
+    }
+
     @include mobile {
-      font-size: 28px;
+      font-size: 20px;
     }
   }
 
@@ -124,12 +132,6 @@
   &-p {
     line-height: 1.55;
 
-    &-num {
-      line-height: 1.55;
-      color: #ffffffb3;
-      opacity: 0.2;
-    }
-
     &-op {
       color: #ffffffb3;
     }
@@ -174,8 +176,12 @@
     &-default {
       font-size: 20px;
 
+      @include medium-desktop {
+        font-size: 18px;
+      }
+
       @include mobile {
-        font-size: 16px;
+        font-size: 13px;
       }
     }
 
