--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,7 +6,8 @@
 // Components
 @import './components/header';
 @import './components/hero';
-@import './components/aadvantages';
+@import './components/advantages';
+@import './components/about-us';
 
 /* stylelint-disable-next-line selector-class-pattern */
 .hero__wrapper-img {
